--- a/contract/Clarinet.toml
+++ b/contract/Clarinet.toml
@@ -14,6 +14,11 @@ epoch = 'latest'
 path = 'contracts/fee-oracle.clar'
 clarity_version = 4
 epoch = 'latest'
+
+[contracts.smart-alerts]
+path = 'contracts/smart-alerts.clar'
+clarity_version = 4
+epoch = 'latest'
 [repl.analysis]
 passes = [
     'check_checker',
