--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@stacks/common": "^7.3.1",
     "@stacks/network": "^7.3.1",
     "@stacks/transactions": "^7.3.1",
+    "@stacks/wallet-sdk": "^7.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "ioredis": "^5.9.2",
