--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,6 +13,8 @@ REDIS_PORT=6379
 # Stacks
 STACKS_NETWORK=mainnet
 STACKS_API_URL=https://api.mainnet.hiro.so
+STACKS_PRIVATE_KEY=
+STACKS_MNEMONIC=
 
 # App
 PORT=3000
